--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TIX - Boletas Digitales Verificadas</title>
+    <title>tix - Boletas Digitales Verificadas</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -72,17 +72,17 @@
 
 <header>
     <img class="logo" src="https://drive.google.com/uc?export=view&id=1WObM7GjlqynTxJ0BYwkrRfGwWXJdWcTj" alt="TIX Logo">
-    <h1>TIX - Boletas Digitales Verificadas</h1>
+    <h1>tix - Boletas Digitales Verificadas</h1>
 </header>
 
 <section class="form-container">
-    <h2>Solicita nuestro servicio</h2>
+    <h2>Compra y vende boletas verificadas</h2>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe2HhR5zcF72e7tlaCy_q9qB91wAAf7HbQb9T2dypicpgEm_Q/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 </section>
 
 <section>
-    <h2>¿Qué es TIX?</h2>
-    <p>TIX es la plataforma digital que asegura la transferencia de boletas para conciertos, teatro y partidos de fútbol. Sin costos ocultos, sin boletas falsificadas, y con transferencias verificadas en tiempo real.</p>
+    <h2>¿Qué es tix?</h2>
+    <p>tix es la plataforma digital que asegura la transferencia de boletas para conciertos, teatro y partidos de fútbol. Sin costos ocultos, sin boletas falsificadas, y con transferencias verificadas en tiempo real.</p>
 </section>
 
 <section>
