--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tix - Boletas Digitales Verificadas</title>
+    <title>Compra y vende las boletas digitales 
+de los eventos que amas, 
+con plena satisfacción, y desde tu celular.</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
