--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compra y vende las boletas digitales 
-de los eventos que amas, 
-con plena satisfacción, y desde tu celular.</title>
+    <title>TIX - Boletas Digitales Verificadas</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -68,27 +66,36 @@ con plena satisfacción, y desde tu celular.</title>
             margin: 0 auto 20px;
             display: block;
         }
+        p {
+            font-size: 18px;
+        }
+        .section-title {
+            font-weight: 600;
+            font-size: 24px;
+            color: #003366;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
 
 <header>
     <img class="logo" src="https://drive.google.com/uc?export=view&id=1WObM7GjlqynTxJ0BYwkrRfGwWXJdWcTj" alt="TIX Logo">
-    <h1>tix - Boletas Digitales Verificadas</h1>
+    <h1>TIX - Boletas Digitales Verificadas</h1>
 </header>
 
 <section class="form-container">
-    <h2>Compra y vende boletas verificadas</h2>
+    <h2>Solicita nuestro servicio</h2>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe2HhR5zcF72e7tlaCy_q9qB91wAAf7HbQb9T2dypicpgEm_Q/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 </section>
 
 <section>
-    <h2>¿Qué es tix?</h2>
-    <p>tix es la plataforma digital que asegura la transferencia de boletas para conciertos, teatro y partidos de fútbol. Sin costos ocultos, sin boletas falsificadas, y con transferencias verificadas en tiempo real.</p>
+    <h2 class="section-title">¿Qué es TIX?</h2>
+    <p>TIX es la plataforma digital que asegura la transferencia de boletas para conciertos, teatro y partidos de fútbol. Sin costos ocultos, sin boletas falsificadas, y con transferencias verificadas en tiempo real.</p>
 </section>
 
 <section>
-    <h2>Nuestras ventajas</h2>
+    <h2 class="section-title">Nuestras ventajas</h2>
     <div class="features">
         <div class="feature">
             <h3>#Disfruta</h3>
@@ -103,6 +110,16 @@ con plena satisfacción, y desde tu celular.</title>
             <p>Sin boletas falsificadas o duplicadas. Solo realizamos transferencias verificadas 100%.</p>
         </div>
     </div>
+</section>
+
+<section>
+    <h2 class="section-title">#Tarifa</h2>
+    <p>Sin costos ocultos y con una tarifa clara. Servicio de 15.000 COP + 5% del monto de la transacción.</p>
+</section>
+
+<section>
+    <h2 class="section-title">#Condiciones</h2>
+    <p>En TIX no hay secretos ni letra pequeña. Revisa todas las condiciones del servicio TIX para asegurarte de que recibes la mejor experiencia sin sorpresas.</p>
 </section>
 
 <footer>
