--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
 
 <header>
-    <img src="https://drive.google.com/uc?export=view&id=1WObM7GjlqynTxJ0BYwkrRfGwWXJdWcTj" alt="TixCol Logo">
+    <img src="logo.jpg" alt="TixCol Logo">
 </header>
 
 <nav>
