--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
 <section id="como-funciona">
     <h1>Adquiere y vende tus boletas digitales en un lugar seguro, sin costos ocultos, y con una tarifa clara.</h1>
     <ol>
-        <li>Entrega los datos de quien vende, quien compra y de la(s) boleta(s)</li>
-        <li>El comprador realiza el pago establecido</li>
-        <li>El vendedor entrega la(s) boleta(s)</li>
-        <li>Tix verifica la transacción y libera dinero y boleta(s)</li>
+        <img src="tix_funciona.jpg" alt="ComoFuncionaTix" style="width: 600px;">
     </ol>
 </section>
 
